обработчик доп задания вынесен в качестве sql в репозити